@@ -59,6 +59,12 @@ sub no_restricted_chars {
     return $self->ok(${$self->content} !~ m/[@&<>;\{\}\(\)]/);
 }
 
+sub no_match {
+    my $self = shift;
+    my $re   = shift;
+    return $self->ok(${$self->content} !~ $re);
+}
+
 sub no_padding {
     my $self = shift;
     return $self->ok(${$self->content} !~ m/^\s/ && ${$self->content} !~ m/\s\s/ && ${$self->content} !~ m/\s$/);
